clusters/titania/apps/torrents/nzbget-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nzbget-ingress
spec:
 tls:
 - hosts:
   - nzbget.cosmos.cboxlab.com
   secretName: nzbget-tls-secret
 rules:
 - host: nzbget.cosmos.cboxlab.com
   http:
     paths:
     - backend:
         service:
           name: nzbget
           port:
             number: 6789
       path: /
       pathType: Prefix
