clusters/titania/apps/torrents/readarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: readarr-ingress
spec:
 tls:
 - hosts:
   - readarr.cosmos.cboxlab.com
   secretName: readarr-tls-secret
 rules:
 - host: readarr.cosmos.cboxlab.com
   http:
     paths:
     - backend:
         service:
           name: readarr
           port:
             number: 8787
       path: /
       pathType: Prefix
