clusters/titania/apps/torrents/sonarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: sonarr-ingress
spec:
 tls:
 - hosts:
   - sonarr.cosmos.cboxlab.com
   secretName: sonarr-tls-secret
 rules:
 - host: sonarr.cosmos.cboxlab.com
   http:
     paths:
     - backend:
         service:
           name: sonarr
           port:
             number: 8989
       path: /
       pathType: Prefix
